# maestro

./: .dockerignore  .gitignore  AGENTS.md  CODEBASE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: dod.yml
adapters/: __init__.py
adapters/github/: __init__.py  adapter.py  http_client.py
config/: README.md  products.example.yaml  reviewers.yaml
docs/: README.md  principles.md  roadmap.md
docs/architecture/: data-model.md  idempotency-and-ordering.md  overview.md  webapp-concept.md  workspace-ux-design.md
docs/guides/: documentation-standards.md  onboarding-a-product.md  repo-controls.md  sdlc.md  setup.md  testing-agent-protocol.md
docs/issues/: LIMITATION-0001-spec-index-not-incremental.md  README.md
docs/product/: feature-board.md  roadmap.md  vision.md
docs/roadmap/: m1-spec-to-design.md  m2-build-to-merge.md
infra/docker/: .env.example  .gitignore  README.md  compose.yml  orchestrator.Dockerfile  web.Dockerfile
logs/test_reports/: README.md
model/: __init__.py  audit.py  client.py  pricing.py  redact.py
orchestrator/: __init__.py  boot.py  cli.py  db.py  eventlog.py  graph.py  httpserver.py  idempotency.py  projection.py  readapi.py  register.py  routing.py  runtime.py  specindex.py  writeapi.py
orchestrator/agents/: __init__.py  base.py  design.py  impl.py  loader.py  spec.py  testgen.py
spikes/: README.md
spikes/langgraph/: .gitignore  README.md  crew.py  delivery_loop.py  event_log.py  model_client.py  run.py  (+1 more)
standards/: README.md  documentation.yaml  git.yaml  naming.yaml  patterns.yaml  reliability.yaml  security.yaml  testing.yaml
storage/: __init__.py  artifactstore.py  config.py  minio.py
tests/: conftest.py  test_agent_base.py  test_agent_loader.py  test_artifactstore.py  test_boot.py  test_db_migration.py  test_design_agent.py  test_eventlog.py  test_github_commit_files.py  test_github_put_file.py  test_idempotency.py  test_identity_auth.py  test_impl_agent.py  test_merge_boundary.py  test_minio_backend.py  test_model_client.py  test_projection.py  test_readapi.py  test_readapi_http.py  test_redact.py  test_refinement_cap.py  test_refinement_loop.py  test_routing_register.py  test_runtime.py  test_spec_agent.py  test_specindex.py  test_storage_config.py  test_testgen_agent.py  test_writeapi.py  test_writeapi_hooks.py  test_writeapi_http.py
web/: .dockerignore  .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
(+104 files in other folders)
