[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.1.0"
description = "maestro — architect-directed agentic delivery platform (engine)"
requires-python = ">=3.11"
# Runtime deps. The LangGraph runtime (ADR-0014) lands in the M1 stage-wiring slice; the event
# log below remains authoritative under it (ADR-0008), so it layers on without changing the core.
dependencies = [
    "anthropic>=0.40",                       # the only provider SDK — reached ONLY through model.ModelClient (ADR-0002)
    "PyYAML>=6",                             # read the product register / routing matrix (ADR-0008)
    "langgraph>=0.3",                        # the orchestration runtime (ADR-0014) — gates as interrupt() / Command(resume=...)
    "langgraph-checkpoint-sqlite>=2.0",      # durable resume across restarts; SQLite to start (ADR-0008), Postgres later
    "boto3>=1.34",                           # the S3-compatible client — reached ONLY through storage.ArtifactStore (ADR-0012); MinIO on ds1 (M2 dogfood) + AWS S3 (M4)
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
maestro = "orchestrator.cli:main"

# The engine packages match the directory map in CODEBASE.md (top-level components).
[tool.setuptools]
packages = ["model", "orchestrator", "adapters", "adapters.github", "storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
